FIX: fixed z-index of modal

--- a/src/1.0/generics.css
+++ b/src/1.0/generics.css
@@ -95,7 +95,7 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	z-index: 9998;
+	z-index: 9997;
 
 	background-color: rgba(0, 0, 0, 0.75);
 	backdrop-filter: blur(4px);
