--- a/src/1.0/modal.css
+++ b/src/1.0/modal.css
@@ -12,7 +12,7 @@
 
 	display: none;
 
-	z-index: 3;
+	z-index: 9998;
 }
 
 .modal:not(.hidden) { display: flex; }
